--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,8 @@
     display: flex;
     flex-wrap: wrap;
     align-content: space-between;
-    justify-content: flex-start;
+    justify-content: space-between;
+    
  }
 .imagenes{
     display: flex;
